# ai_kyouzai_brushup_project

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_RULES.md  CLAUDE_START_HERE.md  PROJECT_RULES.md  README.md  pyproject.toml
archive/: AGENTS_initial_codex_instructions.md  CLAUDE_IMPLEMENT_V2.md  CLAUDE_initial_implementation_instructions.md  OVERWRITE_NOTICE.md  README.md
config/: ocr_patterns.json
docs/: 00_redesign_v2.md  01_requirements.md  02_architecture.md  03_data_format.md  04_output_spec.md  05_implementation_tasks.md  06_claude_code_workflow.md  07_api_integration_design.md  08_user_acceptance_test.md  09_editable_regenerate_guide.md  11_llm_handoff_workflow.md  12_llm_review_apply_workflow.md  13_ocr_quality_check_workflow.md  14_apply_ocr_corrections_workflow.md  15_llm_suggestion_candidates_workflow.md  16_apply_ocr_review_workflow.md  17_image_brushup_workflow.md  18_content_brushup_workflow.md  19_final_image_package_workflow.md  20_final_image_render_workflow.md  99_implementation_review_brief.md  99_phase7_review_2026-07-05.md  README.md  feedback_template.md
examples/: requirements_ai_instagram.json  sample_pages.json  sample_pages_extended.json
output/: brushup.md  canva_design.md
prompts/: brushup_prompt.md  canva_design_prompt.md  ocr_transcription_prompt.md
scripts/: build_apple_vision_ocr.sh  check_ocr_env.sh  make_release_zip.sh  run_sample.sh  run_verification.sh  setup_ocr_macos.sh
src/: apple_vision_ocr.py  brushup_renderer.py  canva_client.py  canva_renderer.py  cli.py  completion_report.py  content_brushup.py  (+34 more)
(+65 files in other folders)
